<resources>
    <string name="app_name">Spend with Brain</string>
    <string name="spend_with_brain">Spend with brain</string>
    <string name="enter_credentials">Enter your credentials to become again active</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="no_account">Have no account?</string>
    <string name="register">Register</string>
    <string name="my_email">My email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_text">Let us know more about you</string>
    <string name="name">Name</string>
    <string name="have_account">Have already an account?</string>
    <string name="wrong_name">Name wrong</string>
    <string name="wrong_email">Email address wrong</string>
    <string name="wrong_password">Password wrong</string>
    <string name="main_page">Main page</string>
    <string name="converter">Converter</string>
    <string name="logout">Logout</string>
    <string name="budget">Budget</string>
    <string name="expenses">Expenses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_budget">My Budget</string>
    <string name="my_expenses">My Expenses</string>
    <string name="add_action">Add action</string>
    <string name="date">Date</string>
    <string name="hint_text">Hint text</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="hint_date">Insert Date</string>
    <string name="hint_amount">Insert Amount</string>
    <string name="hint_details">Insert Details</string>
    <string name="budget_saved">New Budget saved</string>
    <string name="expense_saved">New Expense saved</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_expense">Add Expense</string>
    <string name="base_information">Base information</string>
    <string name="current_balance">Current Balance</string>
    <string name="this_week_expenses">This week expenses</string>
    <string name="this_month_expenses">This month expenses</string>
    <string name="details">Details</string>
    <string name="today_expenses">Today Expenses</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="expense_details_month">Expense details this month</string>
    <string name="positive_balance">Positive Balance</string>
    <string name="negative_balance">Negative Balance</string>
    <string name="total_expensed">Total expensed</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="this_year">This year</string>
    <string name="food">Food</string>
    <string name="car">Car</string>
    <string name="clothes">Clothes</string>
    <string name="savings">Savings</string>
    <string name="health">Health</string>
    <string name="beauty">Beauty</string>
    <string name="travel">Travel</string>
    <string name="string_0">0</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="dodgy_api_date">Converted using SDA (SOME DODGY API) at date %1s</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>