<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.addaction.AddActionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <include
            android:id="@+id/toolbar"
            layout="@layout/transaction_toolbar"/>

        <TextView
            android:id="@+id/date_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/date"
            android:textSize="@dimen/text_16sp"
            android:fontFamily="@font/roboto_normal"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_22dp"
            android:layout_marginStart="@dimen/space_17dp" />

        <EditText
            android:id="@+id/date_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:layout_marginTop="@dimen/space_7dp"
            android:layout_marginStart="@dimen/space_17dp"
            android:layout_marginEnd="@dimen/space_16dp"
            app:layout_constraintTop_toBottomOf="@+id/date_TextView"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="false"
            android:clickable="true"/>

        <TextView
            android:id="@+id/amount_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/date_EditText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/amount"
            android:textSize="@dimen/text_16sp"
            android:fontFamily="@font/roboto_normal"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_25dp"
            android:layout_marginStart="@dimen/space_17dp" />

        <EditText
            android:id="@+id/amount_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_amount"
            android:layout_marginTop="@dimen/space_7dp"
            android:layout_marginStart="@dimen/space_17dp"
            android:layout_marginEnd="@dimen/space_16dp"
            app:layout_constraintTop_toBottomOf="@+id/amount_TextView"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="number"
            android:focusableInTouchMode="true"/>

        <TextView
            android:id="@+id/category_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/amount_EditText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/category"
            android:textSize="@dimen/text_16sp"
            android:fontFamily="@font/roboto_normal"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_25dp"
            android:layout_marginStart="@dimen/space_17dp" />

        <RelativeLayout
            android:id="@+id/grid_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_TextView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grid_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/space_17dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/space_17dp"
                android:nestedScrollingEnabled="false"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/details_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/grid_relative_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/details"
            android:textSize="@dimen/text_16sp"
            android:fontFamily="@font/roboto_normal"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/space_13dp"
            android:layout_marginStart="@dimen/space_17dp" />

        <EditText
            android:id="@+id/details_EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_details"
            android:layout_marginTop="@dimen/space_7dp"
            android:layout_marginStart="@dimen/space_17dp"
            app:layout_constraintTop_toBottomOf="@+id/details_TextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_image"
            android:inputType="text"
            android:focusableInTouchMode="true"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="@dimen/space_36dp"
            android:layout_height="@dimen/space_36dp"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintTop_toBottomOf="@+id/details_TextView"
            app:layout_constraintStart_toEndOf="@+id/details_EditText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/space_7dp"
            android:layout_marginStart="@dimen/space_9dp"
            android:layout_marginEnd="@dimen/space_13dp"/>

        <ImageView
            android:id="@+id/details_ImageView"
            android:layout_width="@dimen/space_208dp"
            android:layout_height="@dimen/space_208dp"
            android:background="@drawable/image_placeholder"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginBottom="@dimen/space_22dp"
            app:layout_constraintTop_toBottomOf="@+id/details_EditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <ImageView
            android:id="@+id/delete"
            android:layout_width="@dimen/space_27dp"
            android:layout_height="@dimen/space_27dp"
            android:background="@drawable/ic_delete"
            android:layout_marginTop="@dimen/space_90dp"
            app:layout_constraintTop_toBottomOf="@+id/details_EditText"
            app:layout_constraintStart_toEndOf="@+id/details_ImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>