<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_10dp"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/close_dialog_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_13dp"
        android:layout_marginEnd="@dimen/space_13dp"
        android:src="@drawable/ic_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/category_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_20dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/category_item" />
    </LinearLayout>

    <TextView
        android:id="@+id/dialog_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_15sp"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginStart="@dimen/space_18dp"
        app:layout_constraintTop_toTopOf="@id/category_container"
        app:layout_constraintStart_toEndOf="@+id/category_container"/>

    <EditText
        android:id="@+id/dialog_date_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "2018-09-03 at 18:00"
        android:layout_marginStart="@dimen/space_18dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_date_textView"
        app:layout_constraintStart_toEndOf="@+id/category_container" />

    <TextView
        android:id="@+id/dialog_amount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_15sp"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginTop="@dimen/space_9dp"
        android:layout_marginStart="@dimen/space_18dp"
        app:layout_constraintTop_toBottomOf="@id/dialog_date_editText"
        app:layout_constraintStart_toEndOf="@+id/category_container"/>

    <EditText
        android:id="@+id/dialog_amount_editText"
        android:layout_width="@dimen/space_165dp"
        android:layout_height="wrap_content"
        tools:text = "1080"
        android:layout_marginStart="@dimen/space_18dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_amount_textView"
        app:layout_constraintStart_toEndOf="@+id/category_container" />

    <TextView
        android:id="@+id/dialog_details_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_15sp"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginTop="@dimen/space_9dp"
        android:layout_marginStart="@dimen/space_20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_amount_editText" />

    <EditText
        android:id="@+id/dialog_details_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text = "Food for grandma...."
        android:layout_marginStart="@dimen/space_20dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_details_textView"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/dialog_details_ImageView"
        android:layout_width="@dimen/space_100dp"
        android:layout_height="@dimen/space_100dp"
        android:background="@drawable/image_placeholder"
        android:layout_marginTop="@dimen/space_18dp"
        app:layout_constraintTop_toBottomOf="@+id/dialog_details_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
    android:id="@+id/dialog_delete_textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/delete"
    android:textAllCaps="true"
    android:textColor="@color/colorRed"
    android:textSize="@dimen/text_16sp"
    android:fontFamily="@font/roboto_bold"
    android:layout_marginTop="@dimen/space_15dp"
    android:layout_marginStart="@dimen/space_20dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/dialog_details_ImageView" />

    <TextView
        android:id="@+id/dialog_edit_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textAllCaps="true"
        android:textColor="@color/colorGreen"
        android:textSize="@dimen/text_16sp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/space_15dp"
        android:layout_marginEnd="@dimen/space_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_details_ImageView" />


</androidx.constraintlayout.widget.ConstraintLayout>