<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.register.RegisterActivity"
    android:background="@color/colorGreen">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/space_98dp"
        android:layout_height="@dimen/space_98dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_18sp"
        android:text="@string/register_text"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_45dp"/>

    <ImageView
        android:id="@+id/imageView_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/border_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="@dimen/space_56dp"
        android:paddingStart="@dimen/space_16dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_name"
        app:layout_constraintStart_toStartOf="@+id/imageView_name"
        app:layout_constraintEnd_toEndOf="@id/imageView_name"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name"
            android:textColorHint="@color/colorGray"
            android:fontFamily="@font/roboto_normal"
            android:textSize="@dimen/text_16sp"
            android:inputType="textPersonName"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_23dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_name"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/border_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="@dimen/space_56dp"
        android:paddingStart="@dimen/space_16dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_email"
        app:layout_constraintStart_toStartOf="@+id/imageView_email"
        app:layout_constraintEnd_toEndOf="@id/imageView_email"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColorHint="@color/colorGray"
            android:fontFamily="@font/roboto_normal"
            android:textSize="@dimen/text_16sp"
            android:inputType="textEmailAddress"
            android:background="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_email"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/border_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_visibility_selector"
        app:passwordToggleTint="@color/colorGreen"
        android:paddingStart="@dimen/space_16dp"
        android:paddingEnd="@dimen/space_5dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_password"
        app:layout_constraintStart_toStartOf="@+id/imageView_password"
        app:layout_constraintEnd_toEndOf="@id/imageView_password"
        android:focusableInTouchMode="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_39dp"
        android:layout_marginTop="@dimen/space_30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:background="@drawable/btn_login"/>

    <TextView
        android:id="@+id/txtView_Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/text_18sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register"/>

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:fontFamily="@font/roboto_normal"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16sp"
        android:layout_marginTop="@dimen/space_32dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_textView_link"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/login_textView_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_30dp"
        android:text="@string/login"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/colorOrange"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginTop="@dimen/space_32dp"
        app:layout_constraintStart_toEndOf="@+id/have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintHorizontal_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>