<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.login.LoginActivity"
    android:background="@color/colorGreen">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/space_98dp"
        android:layout_height="@dimen/space_98dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_14sp"
        android:text="@string/enter_credentials"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/space_34dp"/>

    <ImageView
        android:id="@+id/imageView_email"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/border_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="@dimen/space_56dp"
        android:paddingStart="@dimen/space_16dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_email"
        app:layout_constraintStart_toStartOf="@+id/imageView_email"
        app:layout_constraintEnd_toEndOf="@id/imageView_email"
        android:focusable="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:textColorHint="@color/colorGray"
            android:fontFamily="@font/roboto_normal"
            android:textSize="@dimen/text_16sp"
            tools:text="test_mobile@gmail.com"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:focusable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

   <!-- <TextView
        android:id="@+id/txtView_email"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/colorLightGreen"
        android:textSize="@dimen/text_12sp"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_marginStart="@dimen/space_16dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_email"
        app:layout_constraintStart_toStartOf="@+id/imageView_email"
        app:layout_constraintEnd_toEndOf="@id/imageView_email" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="@dimen/space_5dp"
        android:layout_marginStart="@dimen/space_16dp"
        android:layout_marginEnd="@dimen/space_52dp"
        android:textColorHint="@color/colorLightGray"
        android:hint="@string/my_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16sp"
        android:fontFamily="@font/roboto_normal"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/txtView_email"
        app:layout_constraintStart_toStartOf="@+id/imageView_email"
        app:layout_constraintEnd_toEndOf="@+id/imageView_email" /> -->

    <ImageView
        android:id="@+id/imageView_password"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_56dp"
        android:layout_marginTop="@dimen/space_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_email"
        app:layout_constraintWidth_percent="0.8"
        app:srcCompat="@drawable/border_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="@dimen/space_0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_visibility_selector"
        app:passwordToggleTint="@color/colorGreen"
        android:paddingStart="@dimen/space_16dp"
        android:paddingEnd="@dimen/space_5dp"
        app:layout_constraintTop_toTopOf="@+id/imageView_password"
        app:layout_constraintStart_toStartOf="@+id/imageView_password"
        app:layout_constraintEnd_toEndOf="@id/imageView_password"
        android:focusable="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/roboto_normal"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:text="Parola123#"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/text_16sp"
            android:focusable="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_39dp"
        android:layout_marginTop="@dimen/space_30dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:background="@drawable/btn_login"/>

    <TextView
        android:id="@+id/txtView_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintBottom_toBottomOf="@+id/btn_login"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_53dp"
        android:text="@string/forgot_password"
        android:fontFamily="@font/roboto_normal"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/colorOrange"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:fontFamily="@font/roboto_normal"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_16sp"
        android:layout_marginTop="@dimen/space_11dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_textView_link"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <TextView
        android:id="@+id/register_textView_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_30dp"
        android:text="@string/register"
        android:textSize="@dimen/text_16sp"
        android:textColor="@color/colorOrange"
        android:fontFamily="@font/roboto_normal"
        android:layout_marginTop="@dimen/space_11dp"
        app:layout_constraintStart_toEndOf="@+id/no_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintHorizontal_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>